# gh-prs

./: Cargo.toml  PLAN.md  README.md  bacon.toml
assets/: app.css  app.js  reset.css  status.js  theme.js  utilities.css
assets/components/: cp-alert.js  cp-badge.js  cp-button.js  cp-card.js  cp-combobox.js  cp-pr-filter-state.js  cp-theme-toggle.js  index.js  runtime.js
src/: cache_store.rs  gh_parsing.rs  main.rs  search.rs  startup.rs  telemetry.rs
src/gh/: cache.rs  client.rs  commands.rs  mod.rs  models.rs  runner.rs  validation.rs
src/gh/client/: pull_request_ops.rs
src/handlers/: changes.rs  context.rs  detail.rs  flash.rs  format.rs  forms.rs  health.rs  list.rs  load.rs  mod.rs  not_found.rs  routes.rs  state.rs  stream.rs  write.rs
src/http/: app.rs  builtins.rs  middleware.rs  mod.rs  request.rs  response.rs  router.rs
src/views/: builders.rs  helpers.rs  mod.rs  paths.rs  templates.rs  types.rs
templates/: hello.html
templates/components/pr/: pr_header_card.html  pr_section_tabs.html
templates/components/pr/list/: results_table_header.html
templates/components/shared/: flash_banner.html  loading_panel.html  page_refresh_status.html
templates/layouts/: base.html
templates/pages/: error.html  not_found.html  pr_changes.html  pr_detail.html  pr_list.html
templates/pages/fragments/: pr_changes_content.html  pr_detail_content.html  pr_list_content.html  pr_list_results.html
