[package]
name = "gh-prs"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4"
askama = "0.12"
async-channel = "2"
async-net = "2"
chrono = { version = "0.4", features = ["clock"] }
futures-lite = "2"
httparse = "1"
pulldown-cmark = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
smol = "2"
